<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Sakhi</string>
    <string name="tagline">Your Trusted Health Companion for Women</string>

    <!-- Splash / Home -->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="hi_user">Hi</string>
    <string name="how_are_you">How are you feeling today?</string>

    <!-- Know Your Body -->
    <string name="know_your_body">Know Your Body</string>
    <string name="symptoms_tagline">Some symptoms are common,\nbut not normal.</string>
    <string name="start_awareness_check">Start Awareness Check</string>

    <!-- Conditions -->
    <string name="anemia">Anemia</string>
    <string name="anemia_desc">Fatigue, weakness, dizziness</string>

    <string name="pcos">PCOS</string>
    <string name="pcos_desc">Irregular periods, weight gain</string>

    <string name="thyroid">Thyroid</string>
    <string name="thyroid_desc">Hair fall, metabolism issues</string>

    <!-- Common -->
    <string name="label">Label</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="back">Back</string>

    <!-- Auth -->
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>

    <!-- Accessibility / Content descriptions -->
    <string name="addicon">Add Icon</string>
    <string name="person">Person</string>
    <string name="logo">Logo</string>

    <!-- Reminder & Notification -->
    <string name="notifications">Notifications</string>
    <string name="set_reminders_to_built_healthy_habits_and_achieve_your_goals">
        Set reminders to build healthy habits and achieve your goals.
    </string>
    <string name="reminder_amp_notification">Reminder &amp; Notification</string>
    <string name="add_reminder">+ Add Reminder</string>
    <string name="view_details">View Details →</string>
    <string name="for_women_starting_small_business">For women starting small business...</string>
    <string name="every_3_months_10_00_am">Every 3 Months | 10:00 AM</string>
    <string name="health_check_reminders">Health Check Reminders</string>
    <string name="your_symptom_summary">Your Symptom Summary</string>
    <string name="highlighted_possible_conditions">Highlighted Possible Conditions</string>
    <string name="find_nearby_care">Find Nearby Care</string>
    <string name="listen_to_your_body">Listen to your body</string>
    <string name="set_reminders_to_build_healthy_habits_and_achieve_your_goals">Set Reminders to build healthy habits and achieve your goals.</string>

</resources>
