<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/merge_logo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/emailContainer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_rounded"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/titleSignup"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/person"
            android:src="@drawable/ic_person"
            app:tint="#D81B60" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/email_phone"
            android:paddingStart="12dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_rounded"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/emailContainer">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock"
            app:tint="#D81B60" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cpasswordContainer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_rounded"
        android:orientation="horizontal"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock"
            app:tint="#D81B60" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_gradient_signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpasswordContainer" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#D81B60"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
