<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/itemIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_health"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/health_check_reminders"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/reminderToggle"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/reminderToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:thumbTint="#FFFFFF"
            app:trackTint="#F06292"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemTimeTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/time_tag_bg"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:text="@string/every_3_months_10_00_am"
            android:textColor="#0B5345"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/itemTitle"
            app:layout_constraintTop_toBottomOf="@id/itemTitle" />


        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/for_women_starting_small_business"
            android:textColor="#666666"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/itemTitle"
            app:layout_constraintTop_toBottomOf="@id/itemTimeTag" />

        <Button
            android:id="@+id/btnViewDetails"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="#D81B60"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
