<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <!--    App Logo    -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <!--    App Title    -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:contentDescription="@string/app_name"
        android:elevation="4dp"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.388" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:layout_constraintVertical_bias="0.432">

        <!--    Signup Button    -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/btn_gradient_signup"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:cornerRadius="25dp"
            app:elevation="3dp" />


        <!--    Login Button    -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textColor="@color/pink_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/transparent"
            app:cornerRadius="25dp"
            app:elevation="3dp"
            app:strokeColor="@color/pink_primary"
            app:strokeWidth="2dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>